--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ h4 {
 }
 
 a {
-  color: #f56363;
+  color: #2E95EB;
   transition: all 0.3s ease-in-out;
 }
 
@@ -138,7 +138,7 @@ strong { font-weight: 600; }
   font-size: 18px;
   text-align: center;
   text-decoration: none;
-  background-color: #f56363;
+  background-color: #2E95EB;
   line-height: 1.5;
   border: none;
   border-radius: 3px;
@@ -185,7 +185,7 @@ strong { font-weight: 600; }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #f56363;
+  background-color: #2E95EB;
   transition: all 0.3s ease-in-out;
 }
 
@@ -215,9 +215,9 @@ strong { font-weight: 600; }
 
 .navbar-default.stuck .navbar-nav .btn {
   display: inline-block;
-  background: #f56363;
+  background: #2E95EB;
   color: #fff;
-  border: 1px solid #f56363;
+  border: 1px solid #2E95EB;
 }
 
 .navbar-default.stuck .navbar-nav .btn:hover,
@@ -365,7 +365,7 @@ transform:translateY(0);
 
 .features article li:before {
   content: "• ";
-  color: #f56363;
+  color: #2E95EB;
   padding-right: .5em;
 }
 
@@ -507,7 +507,7 @@ transform:translateY(0);
 
 .plan-features li i {
   padding-left: .5em;
-  color: #f56363;
+  color: #2E95EB;
 }
 
 .buy-button { padding-bottom: 1.5em; }
@@ -555,7 +555,7 @@ blockquote cite {
   12.cta section
    ========================================================================== */
    
-.cta-section { background-color: #f56363; }
+.cta-section { background-color: #2E95EB; }
 
 .cta-section .section-header { margin-bottom: 2.25em; }
 
@@ -573,7 +573,7 @@ blockquote cite {
 
 .cta-section .btn {
   background-color: #fff;
-  color: #f56363;
+  color: #2E95EB;
   border: 1px solid transparent;
 }
 
@@ -669,9 +669,9 @@ blockquote cite {
 .team-details .social { margin-top: .75em; }
 
 .team-details .social li a {
-  color: #f56363;
+  color: #2E95EB;
   background-color: #fff;
-  border: 1px solid #f56363;
+  border: 1px solid #2E95EB;
   width: 55px;
   height: 55px;
   line-height: 55px;
@@ -680,7 +680,7 @@ blockquote cite {
 
 .team-details .social li a:hover {
   color: #fff;
-  background-color: #f56363;
+  background-color: #2E95EB;
   border: 1px solid #fff;
 }
 
@@ -780,7 +780,7 @@ blockquote cite {
 
 .form-control {
   background-color: #fff;
-  border: 1px solid #f56363;
+  border: 1px solid #2E95EB;
   color: #4c4c4c;
   box-shadow: none;
   height: 60px;
@@ -863,7 +863,7 @@ blockquote cite {
 
 .social li a:hover {
   color: #fff;
-  background: #f56363;
+  background: #2E95EB;
 }
 
 /* ==========================================================================
