--- a/css/main.css
+++ b/css/main.css
@@ -62,13 +62,13 @@ h4 {
 }
 
 a {
-  color: #2E95EB;
+  color: #60A6C2;
   transition: all 0.3s ease-in-out;
 }
 
 a:hover,
 a:focus {
-  color: #fa5454;
+  color: #337AB7;
   text-decoration: none;
 }
 
@@ -94,7 +94,7 @@ strong { font-weight: 600; }
    ========================================================================== */ 
    
 .hero-section {
-  background: url(../img/bg.jpg) center center no-repeat scroll;
+  background: url(../img/fondo.jpg) center center no-repeat scroll;
   background-size: cover;
   padding: 0 0 4.5em;
   position: relative;
@@ -138,7 +138,7 @@ strong { font-weight: 600; }
   font-size: 18px;
   text-align: center;
   text-decoration: none;
-  background-color: #2E95EB;
+  background-color: #60A6C2;
   line-height: 1.5;
   border: none;
   border-radius: 3px;
@@ -149,7 +149,7 @@ strong { font-weight: 600; }
 
 .btn:hover {
   color: #fff;
-  background-color: #fa5454;
+  background-color: ;
 }
 
 .btn:active,
@@ -158,7 +158,7 @@ strong { font-weight: 600; }
 .btn:active:focus {
   color: #fff;
   outline: none;
-  background-color: #fa5454;
+  background-color: #337AB7;
 }
 
 .cta-btn p {
@@ -185,7 +185,7 @@ strong { font-weight: 600; }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #2E95EB;
+  background-color: #60A6C2;
   transition: all 0.3s ease-in-out;
 }
 
@@ -206,23 +206,23 @@ strong { font-weight: 600; }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus { color: #fff; }
 
-.navbar-default.stuck .navbar-nav>li>a { color: #4c4c4c; }
+.navbar-default.stuck .navbar-nav>li>a { color: #fff; }
 
 .navbar-default.stuck .navbar-nav > li > a:hover,
-.navbar-default.stuck .navbar-nav > li > a:focus { color: #fa5454; }
+.navbar-default.stuck .navbar-nav > li > a:focus { color: #60A6C2; }
 
 .navbar-default .btn { font-size: 16px; }
 
 .navbar-default.stuck .navbar-nav .btn {
   display: inline-block;
-  background: #2E95EB;
+  background: #60A6C2;
   color: #fff;
-  border: 1px solid #2E95EB;
+  border: 1px solid #60A6C2;
 }
 
 .navbar-default.stuck .navbar-nav .btn:hover,
 .navbar-default.stuck .navbar-nav .btn:focus {
-  background: #fa5454!important;
+  background: #337AB7!important;
   color: #fff;
 }
 
@@ -232,7 +232,7 @@ strong { font-weight: 600; }
   top: 0;
   left: 0;
   z-index: 10;
-  background-color: rgba(255, 255, 255, 0.97);
+  background-image: url(../img/barra.png);
   box-shadow: 0 1px 12px 0px rgba(51, 51, 51, 0.23);
   -webkit-animation: fadeInDown 1s both;
   animation: fadeInDown 1s both;
@@ -365,7 +365,7 @@ transform:translateY(0);
 
 .features article li:before {
   content: "• ";
-  color: #2E95EB;
+  color: #60A6C2;
   padding-right: .5em;
 }
 
@@ -507,7 +507,7 @@ transform:translateY(0);
 
 .plan-features li i {
   padding-left: .5em;
-  color: #2E95EB;
+  color: #60A6C2;
 }
 
 .buy-button { padding-bottom: 1.5em; }
@@ -555,7 +555,7 @@ blockquote cite {
   12.cta section
    ========================================================================== */
    
-.cta-section { background-color: #2E95EB; }
+.cta-section { background-color: #60A6C2; }
 
 .cta-section .section-header { margin-bottom: 2.25em; }
 
@@ -573,7 +573,7 @@ blockquote cite {
 
 .cta-section .btn {
   background-color: #fff;
-  color: #2E95EB;
+  color: #60A6C2;
   border: 1px solid transparent;
 }
 
@@ -669,9 +669,9 @@ blockquote cite {
 .team-details .social { margin-top: .75em; }
 
 .team-details .social li a {
-  color: #2E95EB;
+  color: #60A6C2;
   background-color: #fff;
-  border: 1px solid #2E95EB;
+  border: 1px solid #60A6C2;
   width: 55px;
   height: 55px;
   line-height: 55px;
@@ -680,7 +680,7 @@ blockquote cite {
 
 .team-details .social li a:hover {
   color: #fff;
-  background-color: #2E95EB;
+  background-color: #60A6C2;
   border: 1px solid #fff;
 }
 
@@ -780,7 +780,7 @@ blockquote cite {
 
 .form-control {
   background-color: #fff;
-  border: 1px solid #2E95EB;
+  border: 1px solid #60A6C2;
   color: #4c4c4c;
   box-shadow: none;
   height: 60px;
@@ -790,7 +790,7 @@ blockquote cite {
 }
 
 .form-control:focus {
-  border-color: #fa5454;
+  border-color: #337AB7;
   outline: 0;
   box-shadow: none;
 }
@@ -831,7 +831,7 @@ blockquote cite {
   font-size: 18px;
 }
 
-.footer-links a:hover { color: #fa5454; }
+.footer-links a:hover { color: #337AB7; }
 
 .footer-links a:first-child { padding-right: .4em; }
 
@@ -863,7 +863,7 @@ blockquote cite {
 
 .social li a:hover {
   color: #fff;
-  background: #2E95EB;
+  background: #60A6C2;
 }
 
 /* ==========================================================================
@@ -942,7 +942,7 @@ blockquote::before {
   padding: .75em 1.5em;
 }
 
-.navbar-default .btn:hover { background-color: #fa5454 !important; }
+.navbar-default .btn:hover { background-color: #337AB7 !important; }
 
 .navbar-brand { padding: 0; }
 
